--- a/.github/workflows/auto-english-word-html.yml
+++ b/.github/workflows/auto-english-word-html.yml
@@ -15,7 +15,6 @@ jobs:
       - name: 随机选取单词
         id: pick_word
         run: |
-          # 单词、释义和图片链接
           WORDS=("dog" "cat" "apple")
           MEANINGS=("一只家养的动物" "一只小型家猫" "一种甜水果")
           IMAGES_DOG=("https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg"
@@ -85,8 +84,8 @@ jobs:
 
       - name: 提交并推送 HTML 文件
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add auto-job/
-          git commit -m "自动创建英语单词学习HTML：${{ steps.pick_word.outputs.word }}"
-          git push
+          git commit -m "自动创建英语单词学习HTML：${{ steps.pick_word.outputs.word }}" || echo "No changes to commit"
+          git push "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" main
