--- a/.github/workflows/auto-english-word-html.yml
+++ b/.github/workflows/auto-english-word-html.yml
@@ -9,10 +9,12 @@ jobs:
   generate_html:
     runs-on: ubuntu-latest
     steps:
-      - name: 检出仓库
+      # 1. 检出仓库
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 随机选取单词
+      # 2. 随机选取单词
+      - name: Pick random word
         id: pick_word
         run: |
           WORDS=("dog" "cat" "apple")
@@ -48,7 +50,8 @@ jobs:
           echo "image2=$IMAGE2" >> $GITHUB_OUTPUT
           echo "image3=$IMAGE3" >> $GITHUB_OUTPUT
 
-      - name: 生成 HTML 文件
+      # 3. 生成 HTML 文件
+      - name: Generate HTML
         run: |
           mkdir -p auto-job
           FILENAME="auto-job/${{ steps.pick_word.outputs.word }}.html"
@@ -82,10 +85,11 @@ jobs:
           </html>
           EOF
 
-      - name: 提交并推送 HTML 文件
+      # 4. 提交并推送 HTML 文件（使用 GITHUB_TOKEN）
+      - name: Commit & Push
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add auto-job/
           git commit -m "自动创建英语单词学习HTML：${{ steps.pick_word.outputs.word }}" || echo "No changes to commit"
-          git push "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" main
+          git push "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
