--- a/.github/workflows/fetch-news.yml
+++ b/.github/workflows/fetch-news.yml
@@ -1,9 +1,9 @@
-name: Fetch News
+name: Fetch News Article
 
 on:
   schedule:
     - cron: "0 * * * *"   # 每小时执行一次
-  workflow_dispatch:       # 允许手动触发
+  workflow_dispatch:
 
 jobs:
   fetch-news:
@@ -13,22 +13,34 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Fetch latest news
+      - name: Install xmlstarlet
+        run: sudo apt-get update && sudo apt-get install -y xmlstarlet
+
+      - name: Fetch one news article
         run: |
           mkdir -p news
-          FILE="news/news-$(date +'%Y-%m-%d-%H%M').txt"
+          FILE="news/article-$(date +'%Y-%m-%d-%H%M').html"
 
-          # 获取 BBC 国际新闻 RSS 并提取前5条
+          # 抓取 RSS 第一条新闻：标题、描述、链接
           curl -s https://feeds.bbci.co.uk/news/world/rss.xml \
-            | grep -oP '(?<=<title>).*?(?=</title>)' \
-            | sed -n '2,6p' > "$FILE"
+            | xmlstarlet sel -t -m "//item[1]" \
+              -v "title" -o "|||" -v "description" -o "|||" -v "link" -n > tmp_article.txt
 
-          echo "Saved news to $FILE"
+          IFS="|||" read -r title description link < tmp_article.txt
+
+          # 生成 HTML 文章
+          echo "<html><head><meta charset='UTF-8'><title>$title</title></head><body>" > "$FILE"
+          echo "<h1>$title</h1>" >> "$FILE"
+          echo "<p><em>Source: <a href=\"$link\">BBC News</a></em></p>" >> "$FILE"
+          echo "<div>$description</div>" >> "$FILE"
+          echo "</body></html>" >> "$FILE"
+
+          rm tmp_article.txt
 
       - name: Commit and push
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add news/
-          git commit -m "Add news file $(date +'%Y-%m-%d %H:%M')" || echo "No changes to commit"
+          git commit -m "Add news article $(date +'%Y-%m-%d %H:%M')" || echo "No changes to commit"
           git push origin main
