--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,12 +1,8 @@
-# 允许空白 Issue（如果需要）
-blank_issues_enabled: true
-
-# Issues 页面顶部的介绍文字
-contact_links:
-  - name: 资源贡献指南
-    url: https://github.com/guomengtao/rinuo.com/blob/main/CONTRIBUTING.md  # 可选：链接到详细指南
-    about: 请先阅读资源贡献的规范和流程，再提交新内容哦！
-
-  - name: 常见问题
-    url: https://github.com/guomengtao/rinuo.com/issues?q=is%3Aissue+is%3Aclosed+label%3A%22FAQ%22
-    about: 查看已解决的常见问题，避免重复提问~
+name: Issue Templates
+description: 此仓库的Issue模板配置文件
+body:
+  - type: markdown
+    attributes:
+      value: |
+        # 欢迎来到问题反馈页面
+        在此处提交关于免费开发者资源导航的问题、资源提交请求或建议。请尽量提供详细信息，以便我们更好地处理。
